--- a/shapes-demo.cabal
+++ b/shapes-demo.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 -- The name of the package.
-name:                tile-rider
+name:                shapes-demo
 
 -- The package version.  See the Haskell package versioning policy (PVP) 
 -- for standards guiding when and how versions should be incremented.
@@ -13,13 +13,13 @@ name:                tile-rider
 version:             0.1.0.0
 
 -- A short (one-line) description of the package.
-synopsis:            a simple puzzle game in Haskell with SDL2
+synopsis:            demos for the 'shapes' package
 
 -- A longer description of the package.
 -- description:         
 
 -- URL for the project homepage or repository.
-homepage:            https://github.com/ublubu/tile-rider
+homepage:            https://github.com/ublubu/shapes-demo
 
 -- The license under which the package is released.
 -- license:             
@@ -48,9 +48,9 @@ extra-source-files:  README.md
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
 
-executable side-scroller
+executable shapes-demo
   -- .hs or .lhs file containing the Main module.
-  main-is:             SideScroller.hs
+  main-is:             Main.hs
   
   -- Modules included in this executable, other than Main.
   -- other-modules:       
@@ -63,46 +63,17 @@ executable side-scroller
                      , containers >= 0.5
                      , containers >= 0.5.5.1
                      , sdl2 >=1.3.0
-                     --, sdl2-image >= 0.1.2.0
                      , mtl
-                     , ListZipper
                      , monad-extras >= 0.5.9
                      , linear >= 1.19
                      , lens >= 4.12
                      , vector
                      , zippers
                      , either >= 4.4
+                     , shapes
   
   -- Directories containing source files.
   hs-source-dirs:      src
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
-
-
-executable tile-rider
-  -- .hs or .lhs file containing the Main module.
-  main-is:             TileRider.hs
-  
-  -- Modules included in this executable, other than Main.
-  -- other-modules:       
-  
-  -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:    
-  
-  -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.9
-                     , containers >= 0.5.5.1
-                     , lens >= 4.12
-                     , sdl2 >=1.3.0
-                     --, sdl2-image >= 0.1.2.0
-                     , mtl
-                     , ListZipper
-                     , monad-extras >= 0.5.9
-  
-  -- Directories containing source files.
-  hs-source-dirs:      src
-  
-  -- Base language which the package is written in.
-  default-language:    Haskell2010
-  
