--- a/shapes-demo.cabal
+++ b/shapes-demo.cabal
@@ -59,18 +59,19 @@ executable shapes-demo
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.9
-                     , containers >= 0.5
+  build-depends:       StateVar >= 1.1.0.1
+                     , base >=4.7 && <4.9
                      , containers >= 0.5.5.1
-                     , sdl2 >=1.3.0
-                     , mtl
-                     , monad-extras >= 0.5.9
-                     , linear >= 1.19
+                     , either >= 4.4
                      , lens >= 4.12
+                     , linear >= 1.19
+                     , monad-extras >= 0.5.9
+                     , mtl
+                     , sdl2 >= 2.0.0
+                     , shapes
+                     , text >= 1.2.1.3
                      , vector
                      , zippers
-                     , either >= 4.4
-                     , shapes
   
   -- Directories containing source files.
   hs-source-dirs:      src
